updated storybook readme

--- a/storybook/src/stories/commandbutton/commandbutton.story.mdx
+++ b/storybook/src/stories/commandbutton/commandbutton.story.mdx
@@ -1,7 +1,7 @@
 import { Story, Preview, Meta, Props } from '@storybook/addon-docs/blocks'
 import CommandButton from '../../components/commandbutton.vue'
 
-<Meta title="CommandButton/Docs" Component={CommandButton} />
+<Meta title="CommandButton/Primary" Component={CommandButton} />
 
 # CommandButton
 
@@ -49,4 +49,3 @@ import CommandButton from '../../components/commandbutton.vue'
     template: '<CommandButton name="negative" className="negative" :useDiv="false" :isLoading="false" />',
   }}
 </Story>
-
