--- a/storybook/src/stories/buttons/negative.story.mdx
+++ b/storybook/src/stories/buttons/negative.story.mdx
@@ -1,7 +1,7 @@
 import { Story, Preview, Meta, Props } from '@storybook/addon-docs/blocks'
 import Buttons from '../../components/buttons.vue'
 
-<Meta title="Buttons/Negative" Component={Buttons} />
+<Meta title="Components/Buttons/Negative" Component={Buttons} />
 
 # Buttons
 
