--- a/storybook/src/stories/buttons/primary.story.mdx
+++ b/storybook/src/stories/buttons/primary.story.mdx
@@ -1,9 +1,9 @@
 import { Story, Preview, Meta, Props } from '@storybook/addon-docs/blocks'
 import Buttons from '../../components/buttons.vue'
 
-<Meta title="Components/Buttons/Primary" Component={Buttons} />
+<Meta title="Components/Buttons/Primary" component={Buttons} />
 
-# Buttons
+# Primary Button
 
 <Preview>
   <Story id="buttons--normal" height="60px" />
