--- a/storybook/src/stories/buttons/primary.story.mdx
+++ b/storybook/src/stories/buttons/primary.story.mdx
@@ -33,10 +33,10 @@ This contains definitions for all **Primary-Buttons**.
   <Story name="Primary - Disabled" args={{type: 'button--primary', text: 'Primary Button Disabled', disabled: true, loading: false}}>
       { Template.bind({}) }
   </Story>
-  <Story name="Primary - loading" args={{type: 'button--primary', text: 'Primary Button Loading', disabled: false, loading: true}}>
+  <Story name="Primary - Loading" args={{type: 'button--primary', text: 'Primary Button Loading', disabled: false, loading: true}}>
       { Template.bind({}) }
   </Story>
-  <Story name="Primary - loading disabled" args={{type: 'button--primary', text: 'Primary Button Disabled Loading', disabled: true, loading: true}}>
+  <Story name="Primary - Loading Disabled" args={{type: 'button--primary', text: 'Primary Button Disabled Loading', disabled: true, loading: true}}>
       { Template.bind({}) }
   </Story>
 </Canvas>
