--- a/storybook/src/stories/components/buttons/primary.story.mdx
+++ b/storybook/src/stories/components/buttons/primary.story.mdx
@@ -1,4 +1,4 @@
-import {Story, Meta, Canvas, Props, Preview, Description} from '@storybook/addon-docs';
+import {Story, Meta, Canvas, Props, Description} from '@storybook/addon-docs';
 
 <Meta title="Components/Buttons/Primary" />
 
